--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,9 +26,17 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=
-#
+
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost:3306/wehelp"
+db.default.user=root
+# db.default.password=admin
+
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
+
+db.default.jndiName=DefaultDS
+jpa.default=defaultPersistenceUnit
 
 # Evolutions
 # ~~~~~
