--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,7 +30,7 @@ application.langs="en"
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3306/wehelp"
 db.default.user=root
-# db.default.password=admin
+db.default.password=admin
 
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
